infra/k8s/auth-depl.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: auth-depl
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: auth
#   template:
#     metadata:
#       labels:
#         app: auth
#     spec:
#       containers:
#         - name: auth
#           image: palsp/connex-auth
#           env:
#             - name: DB_HOST
#               value: 'auth-mysql-srv'
#             - name: DB_USER
#               value: 'root'
#             - name : DB_SCHEMA
#               value: 'auth_db'
#             - name: DB_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: auth-db-secret
#                   key: DB_PASSWORD
#             - name : JWT_KEY
#               valueFrom:
#                 secretKeyRef:
#                   name : jwt-secret
#                   key: JWT_KEY
#       initContainers:
#         - name: init-wait
#           image: alpine
#           command: ["sh", "-c", "for i in $(seq 1 300); do nc -zvw1 auth-mysql-srv 3306 && exit 0 || sleep 3; done; exit 1"]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name:  auth
          image: palsp/connex-auth
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: auth-srv
# spec:
#   selector:
#     app: auth
#   ports:
#     - name: auth
#       protocol: TCP
#       port: 3000
#       targetPort: 3000
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
