infra/k8s/event-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
        - name: event
          image: palsp/connex-event
---
apiVersion: v1
kind: Service
metadata:
  name: event-srv
spec:
  selector:
    app: event
  ports:
    - name: event
      protocol: TCP
      port: 3000
      targetPort: 3000
