infra/k8s/users-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-mysql
  template:
    metadata:
      labels:
        app: users-mysql
    spec:
      containers:
        - name: users-mysql
          image: mysql
          args:
            - "--default-authentication-plugin=mysql_native_password"
---
apiVersion: v1
kind: Service
metadata:
  name: users-mysql-srv
spec:
  selector:
    app: users-mysql
  ports:
    - name: db
      port: 3306
      targetPort: 3306
